# AmberForge

./: CMakeLists.txt  README.md
editor/: CMakeLists.txt
engine/: CMakeLists.txt
engine/afengine/: af_core.h  af_defines.h  af_ecs_component.c  af_ecs_component.h  af_ecs_system.c  af_ecs_system.h  af_engine.c  af_engine.h  af_entry.h  af_glrenderer.c  af_glrenderer.h  af_log.c  af_log.h  af_mathf.h  af_memory.c  af_memory.h  af_renderer.c  af_renderer.h  af_window.c  af_window.h  amber_forge.c  amber_forge.h
resources/shaders/: builtin.frag.glsl  builtin.present.frag.glsl  builtin.present.vert.glsl  builtin.vert.glsl
sandbox/: CMakeLists.txt  main.c
